--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -H 0.0.0.0 -p 3000",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -H 0.0.0.0 -p 3000",
     "lint": "next lint"
   },
   "dependencies": {
@@ -59,6 +59,7 @@
     "jspdf": "^3.0.1",
     "lucide-react": "^0.344.0",
     "next": "13.5.6",
+    "next-pwa": "^5.6.0",
     "next-themes": "^0.2.1",
     "nodemailer": "^7.0.6",
     "papaparse": "^5.4.1",
